# south-carolina-2026-tax-changes

./: Makefile  README.md  pyproject.toml  reform.json
frontend/: next.config.js  package-lock.json  package.json
frontend/__tests__/: AggregateImpact.test.tsx
frontend/app/: layout.tsx  robots.ts  sitemap.ts
frontend/app/(shell)/: page.tsx
frontend/components/: AggregateImpact.tsx  CongressionalDistrictImpact.tsx  DynamicDistrictMap.tsx  ExampleHouseholds.tsx  Header.tsx  ImpactAnalysis.tsx  MapTypeToggle.tsx  PolicyOverview.tsx  USDistrictChoroplethMap.tsx
frontend/hooks/: useAggregateImpact.ts
frontend/lib/: api.ts  household.ts  types.ts
frontend/public/data/: congressional_districts.csv  congressional_districts_revert.csv  distributional_impact.csv  distributional_impact_revert.csv  example_households.json  income_brackets.csv  metrics.csv  winners_losers.csv
sc_tax_calc/: __init__.py  household.py  microsimulation.py  reform_applier.py  reforms.py
scripts/: _pipeline_worker.py  compute_example_households.py  compute_impacts.py  generate_district_csv.py  modal_district_pipeline.py  modal_pipeline.py  pipeline.py
tests/: __init__.py  conftest.py  test_csv_data.py  test_example_households_payload.py  test_household.py  test_reforms.py
